# advent-of-code-2025-py

./: .gitignore  README.md  pyproject.toml  tests.sh
day01/: __init__.py  test_me.py
day02/: __init__.py  test_me.py
day03/: __init__.py  test_me.py
day04/: __init__.py  test_me.py
day05/: __init__.py  test_me.py
day06/: __init__.py  test_me.py
shared/: __init__.py  helpers.py  node.py
skel/: __init__.py  __main__.py  test_me.py
