[tool.poetry]
name = "advent-of-code-2025-py"
version = "0.1.0"
description = "Advent of Code 2025"
authors = ["Nate Plamondon <nplamondon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.0.0"
numpy = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "--cov=. --cov-report term-missing"
